updates Tweet class

--- a/classes/TweetUtil.cls
+++ b/classes/TweetUtil.cls
@@ -1,3 +1,4 @@
+//First comment
 public class TweetUtil {
     public static final String[] SIGNATURE_KEYS = new String[]
         {'oauth_consumer_key', 
