--- a/classes/EmailManager.cls
+++ b/classes/EmailManager.cls
@@ -1,5 +1,6 @@
 public class EmailManager {
-    // Public method
+ // Testing jenkins  
+ // Public method
     public void sendMail(String address, String subject, String body) {
         // Create an email message object
         Messaging.SingleEmailMessage mail = new Messaging.SingleEmailMessage();
