--- a/classes/EmailManager.cls
+++ b/classes/EmailManager.cls
@@ -1,4 +1,5 @@
 public class EmailManager {
+//Public class
     public void sendMail(String address, String subject, String body) {
         // Create an email message object
         Messaging.SingleEmailMessage mail = new Messaging.SingleEmailMessage();
